# AgentCord

./: README.md  main.py  pyproject.toml
agentcord/: __init__.py  __main__.py  agent.py  ai.py  bot.py  config.py  core.py  database.py  live_agent.py  logger.py  models.py  proxy.py  pterodactyl.py  workspace.py
data/: agentcord.db
tests/: test_agent_patch_prompt.py  test_agent_pterodactyl_tools.py  test_agent_review_tracking.py  test_agent_run_behavior.py  test_core.py  test_credit_manager.py  test_database_delete_task.py  test_file_manager_explorer.py  test_interaction_response_fallback.py  test_live_agent_resilience.py  test_live_agent_review_view.py  test_model_metadata.py  test_pterodactyl_list_servers.py  test_pterodactyl_proxy_errors.py  test_pterodactyl_pull_ignore.py  test_workspace_grep_search.py  test_workspace_pull_limit.py  test_workspace_task_review.py
